# SeekReap-Tier-3-Private

./: .gitignore  ARCHITECTURE_SUMMARY.md  Caution,  GITHUB_SETUP.md  README.md  __init__.py  consensus_engine.py  continuous_processor.py  docker-compose.yml  fix_analysis_bug.patch  main.py  main.py.bak  nohup.out  pyproject.toml  requirements.txt  run_real_content.py  run_real_content_db.py  setup.py  test_tier3.py  test_tier4.py  tier2_client.py  tier3_api_app.py  tier3_function_class_list.txt  tier3_log.txt  tier3_server.py
.github/workflows/: ci.yml
active_runners/: check_structure.sh  deploy.sh  start_tier3.sh  watchdog.sh
docs/: TIER2_TIER3_CONTRACT.md  TIER3_DECISION_MODEL.md  TIER3_PUBLIC_API.md  TIER3_VERSIONING.md  tier3_lifecycle.md
envelope_consumers/: __init__.py  consumer.py
examples/: __init__.py  example_usage.py
scoring_engines/: __init__.py  scorer.py
semantic_processors/: __init__.py  processor.py
tests/: __init__.py  test_simple.py  test_tier3.py
tests/unit/: test_batch_processing.py  test_contract_math.py  test_determinism.py  test_thresholds.py  test_tier3_seal.py  test_validator.py
tier3/: README.md  api.py  contract.py  seal.py  test_tier3.py  tier3_final_test.py  validators.py
